bindings/ruby/ext/blazen/blazen.h

/**
 * Opaque error handle owned by the caller. Produced by any fallible cabi
 * function via an out-parameter `*mut *mut BlazenError`. Released with
 * [`blazen_error_free`].
 *
 * Deliberately not `#[repr(C)]` so cbindgen emits the C side as a
 * forward-declared `typedef struct BlazenError BlazenError;` opaque type —
 * FFI hosts never inspect the layout directly, they go through the
 * accessor functions below.
 */
typedef struct BlazenError BlazenError;
/**
 * Opaque handle wrapping a `blazen_uniffi::workflow::Event` value.
 *
 * Deliberately not `#[repr(C)]` — cbindgen emits this as a forward-
 * declared opaque struct on the C side.
 */
typedef struct BlazenEvent BlazenEvent;
/**
 * Opaque handle wrapping [`InnerMusicChunk`].
 *
 * Produced by the music-stream sink trampoline (one allocation per
 * streamed chunk) and handed to the foreign-side `on_chunk` callback. The
 * foreign callback OWNS the chunk and MUST release it via
 * [`blazen_music_chunk_free`] before returning.
 *
 * Wire-format: `samples` is 32-bit float PCM in `[-1.0, 1.0]` at the
 * backend's sample rate; `is_final` is a UI hint (the canonical
 * end-of-stream marker is the sink's `on_done` callback);
 * `latency_seconds` is the per-chunk measured latency from call-start
 * (None when unreported).
 */
typedef struct BlazenMusicChunk BlazenMusicChunk;
/**
 * Opaque handle wrapping a `blazen_uniffi::workflow::StepOutput` enum.
 *
 * `StepOutput` is what a foreign step handler returns to the Rust
 * workflow engine, so this surface needs both constructors (for foreign
 * step handlers being invoked from Rust via Phase R5 trampolines) and
 * readers (for Rust producing values consumed by foreign code).
 *
 * Variant discrimination goes through [`blazen_step_output_kind`] which
 * returns one of the `BLAZEN_STEP_OUTPUT_*` constants.
 */
typedef struct BlazenStepOutput BlazenStepOutput;
/**
 * Opaque wrapper around [`blazen_uniffi::streaming::StreamChunk`].
 */
typedef struct BlazenStreamChunk BlazenStreamChunk;
/**
 * Opaque wrapper around [`blazen_uniffi::llm::TokenUsage`].
 */
typedef struct BlazenTokenUsage BlazenTokenUsage;
/**
 * Opaque handle wrapping [`InnerVcChunk`].
 *
 * Produced by the voice-conversion stream sink trampoline (one allocation
 * per streamed chunk) and handed to the foreign-side `on_chunk` callback.
 * The foreign callback OWNS the chunk and MUST release it via
 * [`blazen_vc_chunk_free`] before returning.
 *
 * Wire-format: `samples` is 32-bit float PCM in `[-1.0, 1.0]` at the
 * target voice's native sample rate; `is_final` is a UI hint (the
 * canonical end-of-stream marker is the sink's `on_done` callback);
 * `latency_seconds` is the per-chunk measured latency from call-start
 * (None when unreported).
 */
typedef struct BlazenVcChunk BlazenVcChunk;
/**
 * Function-pointer vtable a foreign caller fills out to implement
 * [`CompletionStreamSink`] across the C ABI.
 *
 * All three callbacks plus `drop_user_data` are required (no nullable
 * function pointers). The vtable is consumed by
 * [`blazen_complete_streaming`] / [`blazen_complete_streaming_blocking`],
 * which take ownership of `user_data` and the function pointers for the
 * lifetime of the streaming call. `drop_user_data` runs exactly once when
 * the wrapping [`CStreamSink`] drops (after the stream has terminated, or on
 * an early-return failure path before the stream starts).
 *
 * ## Thread safety
 *
 * The streaming engine schedules callbacks on tokio worker threads which
 * will generally differ from the thread that registered the sink. The
 * foreign side guarantees that `user_data` and the function pointers are
 * safe to invoke from any thread. In Ruby, the `ffi` gem's `FFI::Callback`
 * reacquires the GVL automatically before invoking the user-provided block;
 * in Dart, `NativeCallable.listener` marshals back to the isolate event
 * loop; in native hosts the responsibility falls to the embedder.
 *
 * ## Callback contracts
 *
 * See the module-level docs for the per-callback ownership rules. In
 * summary: every pointer passed *into* a callback is caller-owned and the
 * callback must free it (or consume it into a derivative structure) before
 * returning. Every pointer the callback writes *out* (`out_err`) becomes
 * caller-owned and the cabi will free it after consuming.
 */
typedef struct {
    /**
     * Opaque foreign-side context handed back to each callback. Owned by
     * this vtable struct; released via `drop_user_data` when the wrapper
     * drops.
     */
    void *user_data;
    /**
     * Invoked exactly once when the wrapping `CStreamSink` drops.
     * Implementations should reclaim and release `user_data`.
     */
    void (*drop_user_data)(void *user_data);
    /**
     * Receive a single chunk. `chunk` is caller-owned; the callback MUST
     * free it via `blazen_stream_chunk_free` (or consume it into a
     * derivative structure). Returns `0` on success or `-1` on failure
     * (writing a fresh `*mut BlazenError` into `*out_err`). A `-1` aborts
     * the stream.
     */
    int32_t (*on_chunk)(void *user_data, BlazenStreamChunk *chunk, BlazenError **out_err);
    /**
     * Receive the terminal completion signal. `finish_reason` is a
     * caller-owned `*mut c_char` freed via `blazen_string_free`; `usage`
     * is a caller-owned `*mut BlazenTokenUsage` freed via
     * `blazen_token_usage_free`. Returns `0` on success or `-1` on
     * failure (writing a fresh `*mut BlazenError` into `*out_err`).
     */
    int32_t (*on_done)(void *user_data,
                       char *finish_reason,
                       BlazenTokenUsage *usage,
                       BlazenError **out_err);
    /**
     * Receive a fatal error from the stream. `err` is a caller-owned
     * `*mut BlazenError` freed via `blazen_error_free`. Returns `0` on
     * success or `-1` on failure (writing the callback's own error into
     * `*out_err`). A `-1` from `on_error` is logged via the resulting
     * `BlazenResult` but does NOT trigger a second `on_error` invocation.
     */
    int32_t (*on_error)(void *user_data, BlazenError *err, BlazenError **out_err);
} BlazenCompletionStreamSinkVTable;
/**
 * C-side vtable for a foreign `StepHandler` implementation.
 *
 * All three fields are required (no nullable function pointers). The vtable
 * is consumed by [`blazen_workflow_builder_add_step`] which takes ownership
 * of `user_data` — the foreign side must NOT free `user_data` after the
 * add-step call returns; the cabi will invoke `drop_user_data` exactly once
 * when the workflow drops the step handler.
 *
 * # Thread safety
 *
 * The foreign side guarantees that `user_data` and the function pointers are
 * safe to invoke from any thread (the cabi may invoke `invoke` on a Tokio
 * blocking-pool thread, which differs from the thread that created the
 * vtable). In Ruby this works because the `ffi` gem reacquires the GVL
 * automatically for declared `FFI::Callback` signatures; Dart's
 * `NativeCallable.listener` marshals back to the isolate event loop;
 * native hosts must opt into thread-safety in their own runtime model.
 */
typedef struct {
    /**
     * Opaque foreign-side context handed back to each function pointer.
     * Owned by this vtable struct (released via `drop_user_data` on drop).
     */
    void *user_data;
    /**
     * Called exactly once when the wrapping `CStepHandler` drops.
     * Implementations should reclaim and release `user_data`.
     */
    void (*drop_user_data)(void *user_data);
    /**
     * Synchronous invocation of the step.
     *
     * Arguments:
     * - `user_data`: the vtable's `user_data` pointer (copied in for convenience)
     * - `event`: caller-owned `*mut BlazenEvent` — the callback OWNS this and
     *   must free it via `blazen_event_free` before returning, OR consume it
     *   into a derivative structure
     * - `out_output`: writable slot for the resulting `*mut BlazenStepOutput`
     * - `out_err`: writable slot for the error on failure
     *
     * Returns: 0 on success (`out_output` set), -1 on failure (`out_err` set).
     */
    int32_t (*invoke)(void *user_data,
                      BlazenEvent *event,
                      BlazenStepOutput **out_output,
                      BlazenError **out_err);
} BlazenStepHandlerVTable;
/**
 * Function-pointer vtable a foreign caller fills out to implement
 * [`MusicStreamSink`] across the C ABI.
 *
 * All three callbacks plus `drop_user_data` are required. The vtable is
 * consumed by the music stream-pump functions below
 * ([`blazen_music_model_stream_generate_music`] /
 * [`blazen_music_model_stream_generate_music_blocking`] /
 * [`blazen_music_model_stream_generate_sfx`] /
 * [`blazen_music_model_stream_generate_sfx_blocking`]); they take ownership
 * of `user_data` and the function pointers for the lifetime of the streaming
 * call. `drop_user_data` runs exactly once when the wrapping
 * [`CMusicStreamSink`] drops (after the stream has terminated, or on an
 * early-return failure path before the stream starts).
 */
typedef struct {
    /**
     * Opaque foreign-side context handed back to each callback. Owned by
     * this vtable struct; released via `drop_user_data` when the wrapper
     * drops.
     */
    void *user_data;
    /**
     * Invoked exactly once when the wrapping `CMusicStreamSink` drops.
     * Implementations should reclaim and release `user_data`.
     */
    void (*drop_user_data)(void *user_data);
    /**
     * Receive a single chunk. `chunk` is caller-owned; the callback MUST
     * free it via [`crate::compute_records::blazen_music_chunk_free`] (or
     * consume it into a derivative structure). Returns `0` on success or
     * `-1` on failure (writing a fresh `*mut BlazenError` into `*out_err`).
     * A `-1` aborts the stream.
     */
    int32_t (*on_chunk)(void *user_data, BlazenMusicChunk *chunk, BlazenError **out_err);
    /**
     * Receive the terminal completion signal. Music streams carry no
     * auxiliary `on_done` payload (no finish reason, no token usage).
     * Returns `0` on success or `-1` on failure (writing a fresh
     * `*mut BlazenError` into `*out_err`).
     */
    int32_t (*on_done)(void *user_data, BlazenError **out_err);
    /**
     * Receive a fatal error from the stream. `err` is a caller-owned
     * `*mut BlazenError` freed via `blazen_error_free`. Returns `0` on
     * success or `-1` on failure (writing the callback's own error into
     * `*out_err`).
     */
    int32_t (*on_error)(void *user_data, BlazenError *err, BlazenError **out_err);
} BlazenMusicStreamSinkVTable;
/**
 * Function-pointer vtable a foreign caller fills out to implement
 * [`VcStreamSink`] across the C ABI.
 *
 * All three callbacks plus `drop_user_data` are required. The vtable is
 * consumed by the voice-conversion stream-pump functions below
 * ([`blazen_vc_model_stream_convert_pcm_to_sink`] /
 * [`blazen_vc_model_stream_convert_pcm_to_sink_blocking`]); they take
 * ownership of `user_data` and the function pointers for the lifetime of
 * the streaming call. `drop_user_data` runs exactly once when the wrapping
 * [`CVcStreamSink`] drops (after the stream has terminated, or on an
 * early-return failure path before the stream starts).
 */
typedef struct {
    /**
     * Opaque foreign-side context handed back to each callback. Owned by
     * this vtable struct; released via `drop_user_data` when the wrapper
     * drops.
     */
    void *user_data;
    /**
     * Invoked exactly once when the wrapping `CVcStreamSink` drops.
     * Implementations should reclaim and release `user_data`.
     */
    void (*drop_user_data)(void *user_data);
    /**
     * Receive a single chunk. `chunk` is caller-owned; the callback MUST
     * free it via [`crate::compute_records::blazen_vc_chunk_free`] (or
     * consume it into a derivative structure). Returns `0` on success or
     * `-1` on failure (writing a fresh `*mut BlazenError` into `*out_err`).
     * A `-1` aborts the stream.
     */
    int32_t (*on_chunk)(void *user_data, BlazenVcChunk *chunk, BlazenError **out_err);
    /**
     * Receive the terminal completion signal. Voice-conversion streams
     * carry no auxiliary `on_done` payload. Returns `0` on success or
     * `-1` on failure (writing a fresh `*mut BlazenError` into `*out_err`).
     */
    int32_t (*on_done)(void *user_data, BlazenError **out_err);
    /**
     * Receive a fatal error from the stream. `err` is a caller-owned
     * `*mut BlazenError` freed via `blazen_error_free`. Returns `0` on
     * success or `-1` on failure (writing the callback's own error into
     * `*out_err`).
     */
    int32_t (*on_error)(void *user_data, BlazenError *err, BlazenError **out_err);
} BlazenVcStreamSinkVTable;
/**
 * Function-pointer vtable a foreign caller fills out to implement
 * [`ToolHandler`] across the C ABI.
 *
 * `user_data` is opaque to Rust — it's whatever the foreign side wants to
 * associate with the handler (a boxed Ruby block, a Dart isolate token, a
 * Crystal proc, etc.). It is passed back unchanged to every `execute`
 * invocation and to `drop_user_data` when the wrapper is dropped.
 *
 * ## `execute` contract
 *
 * - `tool_name` and `arguments_json` are caller-owned C strings that remain
 *   valid for the duration of the call. The callback MUST NOT free them.
 * - On success, the callback writes a heap-allocated NUL-terminated UTF-8
 *   string into `*out_result_json`. The string must have been allocated in
 *   a way that is compatible with [`crate::string::blazen_string_free`]
 *   (i.e. `CString::into_raw` on the Rust side, or anything the foreign
 *   side hands back through `blazen_string_alloc` if one exists). The
 *   cabi surface frees the string with `blazen_string_free`.
 * - On failure, the callback writes a caller-owned `*mut BlazenError` into
 *   `*out_err`. The cabi surface frees it with `blazen_error_free`.
 * - The return value is `0` on success and `-1` on failure. Any other
 *   non-zero value is treated as a failure but logged as a protocol
 *   violation in the synthesised `Internal` error message.
 *
 * ## `drop_user_data` contract
 *
 * Called exactly once when the [`CToolHandler`] wrapper is dropped — i.e.
 * when the [`InnerAgent`] referencing this handler is dropped and the last
 * reference goes away. The foreign side releases whatever resources back
 * `user_data` here.
 */
typedef struct {
    /**
     * Opaque foreign-side pointer. Passed back to `execute` and
     * `drop_user_data` unchanged.
     */
    void *user_data;
    /**
     * Invoked when the wrapper is dropped. The foreign side releases
     * `user_data` here.
     */
    void (*drop_user_data)(void *user_data);
    /**
     * Executes the named tool. See the struct-level docs for the contract.
     */
    int32_t (*execute)(void *user_data,
                       const char *tool_name,
                       const char *arguments_json,
                       char **out_result_json,
                       BlazenError **out_err);
} BlazenToolHandlerVTable;