bindings/ruby/lib/blazen/ffi.rb

# frozen_string_literal: true

require "ffi"
require "rbconfig"

module Blazen
  # Hand-written FFI bridge to +libblazen_cabi+.
  #
  # Mirrors every symbol declared in +ext/blazen/blazen.h+ (cbindgen-emitted
  # from the Rust +blazen-cabi+ crate). All foreign opaque types cross the FFI
  # boundary as +:pointer+ — typed accessors live in the per-type Ruby helper
  # modules in +lib/blazen/*.rb+. Three by-value vtable structs
  # ({BlazenStepHandlerVTable}, {BlazenToolHandlerVTable},
  # {BlazenCompletionStreamSinkVTable}) are mapped to {::FFI::Struct} subclasses
  # below so foreign callback hosts can fill them out in Ruby and pass them in
  # by value.
  module FFI
    extend ::FFI::Library

    # Per-arch subdirectory for prebuilt native libs produced by
    # +scripts/build-uniffi-lib.sh+. We probe both the per-arch path
    # (+ext/blazen/linux_amd64/libblazen_cabi.so+) and the flat path
    # (+ext/blazen/libblazen_cabi.so+) at load time.
    #
    # @return [String] the per-arch subdirectory ("" on unknown platforms)
    def self.arch_subdir
      host_os = RbConfig::CONFIG["host_os"]
      host_cpu = RbConfig::CONFIG["host_cpu"]
      case host_os
      when /linux/
        case host_cpu
        when "x86_64" then "linux_amd64"
        when /aarch64|arm64/ then "linux_arm64"
        else ""
        end
      when /darwin/
        case host_cpu
        when "x86_64" then "darwin_amd64"
        when /arm64|aarch64/ then "darwin_arm64"
        else ""
        end
      when /mingw|mswin/
        case host_cpu
        when "x86_64" then "windows_amd64"
        else ""
        end
      else
        ""
      end
    end

    # Native library filename for the current platform.
    LIB_NAME = case RbConfig::CONFIG["host_os"]
               when /darwin/ then "libblazen_cabi.dylib"
               when /mingw|mswin|cygwin/ then "libblazen_cabi.dll"
               else "libblazen_cabi.so"
               end

    # Candidate paths probed in order. The first existing file wins; the
    # bare name is the final fallback (delegated to the loader's search path).
    LIB_SEARCH_PATHS = [
      File.expand_path("../../ext/blazen/#{arch_subdir}/#{LIB_NAME}", __dir__),
      File.expand_path("../../ext/blazen/#{LIB_NAME}", __dir__),
    ].uniq

    lib_path = LIB_SEARCH_PATHS.find { |p| File.exist?(p) } || LIB_NAME
    ffi_lib lib_path

    # -------------------------------------------------------------------
    # Error-kind constants (mirror BLAZEN_ERROR_KIND_* from blazen.h)
    # -------------------------------------------------------------------
    ERROR_KIND_AUTH           = 1
    ERROR_KIND_RATE_LIMIT     = 2
    ERROR_KIND_TIMEOUT        = 3
    ERROR_KIND_VALIDATION     = 4
    ERROR_KIND_CONTENT_POLICY = 5
    ERROR_KIND_UNSUPPORTED    = 6
    ERROR_KIND_COMPUTE        = 7
    ERROR_KIND_MEDIA          = 8
    ERROR_KIND_PROVIDER       = 9
    ERROR_KIND_WORKFLOW       = 10
    ERROR_KIND_TOOL           = 11
    ERROR_KIND_PEER           = 12
    ERROR_KIND_PERSIST        = 13
    ERROR_KIND_PROMPT         = 14
    ERROR_KIND_MEMORY         = 15
    ERROR_KIND_CACHE          = 16
    ERROR_KIND_CANCELLED      = 17
    ERROR_KIND_INTERNAL       = 18

    # -------------------------------------------------------------------
    # BatchItem / StepOutput tag constants
    # -------------------------------------------------------------------
    BATCH_ITEM_SUCCESS = 0
    BATCH_ITEM_FAILURE = 1

    STEP_OUTPUT_NONE     = 0
    STEP_OUTPUT_SINGLE   = 1
    STEP_OUTPUT_MULTIPLE = 2

    # -------------------------------------------------------------------
    # Callback typedefs (used by the vtable structs that follow)
    # -------------------------------------------------------------------

    # StepHandler vtable callbacks
    callback :step_handler_drop_user_data, [:pointer], :void
    callback :step_handler_invoke,
             [:pointer, :pointer, :pointer, :pointer],
             :int32

    # ToolHandler vtable callbacks
    callback :tool_handler_drop_user_data, [:pointer], :void
    callback :tool_handler_execute,
             [:pointer, :pointer, :pointer, :pointer, :pointer],
             :int32

    # CompletionStreamSink vtable callbacks
    callback :stream_sink_drop_user_data, [:pointer], :void
    callback :stream_sink_on_chunk,
             [:pointer, :pointer, :pointer],
             :int32
    callback :stream_sink_on_done,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :stream_sink_on_error,
             [:pointer, :pointer, :pointer],
             :int32

    # MusicStreamSink vtable callbacks (distinct from completion-stream:
    # music chunks carry PCM samples + a final-flag and the +on_done+
    # signal has no finish-reason / token-usage payload — see
    # +BlazenMusicStreamSinkVTable+ in +blazen.h+).
    callback :music_stream_sink_drop_user_data, [:pointer], :void
    callback :music_stream_sink_on_chunk,
             [:pointer, :pointer, :pointer],
             :int32
    callback :music_stream_sink_on_done,
             [:pointer, :pointer],
             :int32
    callback :music_stream_sink_on_error,
             [:pointer, :pointer, :pointer],
             :int32

    # VcStreamSink vtable callbacks (mirror +BlazenVcStreamSinkVTable+ in
    # +blazen.h+). Distinct from the music sink: voice-conversion chunks
    # carry PCM samples + a final-flag and the +on_done+ signal has no
    # auxiliary payload (matches the music sink shape — but the chunk
    # handle type is +BlazenVcChunk+).
    callback :vc_stream_sink_drop_user_data, [:pointer], :void
    callback :vc_stream_sink_on_chunk,
             [:pointer, :pointer, :pointer], :int32
    callback :vc_stream_sink_on_done,
             [:pointer, :pointer], :int32
    callback :vc_stream_sink_on_error,
             [:pointer, :pointer, :pointer], :int32

    # CustomProvider vtable callbacks — 16 typed-method fn-pointers + 2 lifecycle.
    # Every typed callback receives a request pointer (caller-owned, the callback
    # must free or consume it before returning) and writes either a success
    # result pointer into +out_*+ or a +BlazenError *+ into +out_err+. Returning
    # +-1+ without writing +out_err+ surfaces upstream as a synthetic
    # +InternalError+ (see the cabi adapter docs).
    callback :custom_provider_drop_user_data, [:pointer], :void
    callback :custom_provider_complete,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_stream,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_embed,
             [:pointer, :pointer, :size_t, :pointer, :pointer],
             :int32
    callback :custom_provider_text_to_speech,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_generate_music,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_generate_sfx,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_clone_voice,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_list_voices,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_delete_voice,
             [:pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_generate_image,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_upscale_image,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_text_to_video,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_image_to_video,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_transcribe,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_generate_3d,
             [:pointer, :pointer, :pointer, :pointer],
             :int32
    callback :custom_provider_remove_background,
             [:pointer, :pointer, :pointer, :pointer],
             :int32

    # -------------------------------------------------------------------
    # By-value vtable structs (mirror layouts in blazen.h)
    # -------------------------------------------------------------------

    # Vtable a foreign caller fills in to implement a workflow step handler.
    class BlazenStepHandlerVTable < ::FFI::Struct
      layout :user_data,       :pointer,
             :drop_user_data,  :step_handler_drop_user_data,
             :invoke,          :step_handler_invoke
    end

    # Vtable a foreign caller fills in to implement an agent tool handler.
    class BlazenToolHandlerVTable < ::FFI::Struct
      layout :user_data,       :pointer,
             :drop_user_data,  :tool_handler_drop_user_data,
             :execute,         :tool_handler_execute
    end

    # Vtable a foreign caller fills in to receive streaming-completion events.
    class BlazenCompletionStreamSinkVTable < ::FFI::Struct
      layout :user_data,       :pointer,
             :drop_user_data,  :stream_sink_drop_user_data,
             :on_chunk,        :stream_sink_on_chunk,
             :on_done,         :stream_sink_on_done,
             :on_error,        :stream_sink_on_error
    end

    # Vtable a foreign caller fills in to receive streaming-music events
    # (mirrors +BlazenMusicStreamSinkVTable+ in +blazen.h+). Distinct from
    # +BlazenCompletionStreamSinkVTable+ — music's +on_done+ carries no
    # payload, and +on_chunk+ receives a +BlazenMusicChunk+ rather than a
    # +BlazenStreamChunk+.
    class BlazenMusicStreamSinkVTable < ::FFI::Struct
      layout :user_data,       :pointer,
             :drop_user_data,  :music_stream_sink_drop_user_data,
             :on_chunk,        :music_stream_sink_on_chunk,
             :on_done,         :music_stream_sink_on_done,
             :on_error,        :music_stream_sink_on_error
    end

    # Vtable a foreign caller fills in to receive streaming
    # voice-conversion events (mirrors +BlazenVcStreamSinkVTable+ in
    # +blazen.h+). Same shape as the music sink — chunks carry PCM
    # samples and +on_done+ is payload-free — but the chunk handle type
    # is +BlazenVcChunk+ rather than +BlazenMusicChunk+.
    class BlazenVcStreamSinkVTable < ::FFI::Struct
      layout :user_data,       :pointer,
             :drop_user_data,  :vc_stream_sink_drop_user_data,
             :on_chunk,        :vc_stream_sink_on_chunk,
             :on_done,         :vc_stream_sink_on_done,
             :on_error,        :vc_stream_sink_on_error
    end
